[package]
name = "hyper-scan"
version = "0.1.1"
authors = ["Femi Bankole <llordbanks500@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/iTranscend/hyper-scan"
description = "Scan for services running on the open ports of a given host"
categories = ["command-line-utilities", "network-programming"]
keywords = ["scanner", "network", "port", "open", "multi-threaded"]
rust-version = "1.60.0"

[dependencies]
structopt = "0.3"
tokio = { version = "1.0", features = ["net", "time", "process", "macros", "rt", "rt-multi-thread"] }
futures = "0.3"

[[bin]]
name = "hs"
path = "src/main.rs"